# pulseproof

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  railway.json  tsconfig.json
app/: globals.css  layout.tsx  manifest.ts
components/: fan-zone.module.css  fan-zone.tsx  judge-live-lab.module.css  judge-live-lab.tsx  match-chat.module.css  match-chat.tsx  matchday-command-center.tsx  pulse-dashboard.tsx  pwa-register.tsx  team-flag.tsx  upcoming-match-hub.tsx  wallet-session-provider.tsx
docs/: ARCHITECTURE.md  COMPETITIVE_DIFFERENTIATION.md  DATA_INTEGRITY.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FINAL_REPORT.md  HACKATHON_COMPLIANCE.md  HUMAN_AUTHORSHIP_EVIDENCE.md  JUDGE_SCORECARD.md  LIVE_CAPTURE_RUNBOOK.md  LIVE_DATA_AND_REPLAY.md  PRODUCT_GROWTH_RESEARCH.md  SUBMISSION.md  TEST_REPORT.md  THREAT_MODEL.md  VI_HACKATHON_PLAN.md  YOUTUBE.md
lib/: attestation.ts  catch-up-capsule.ts  chat-signature.ts  community-chat.ts  demo-data.ts  fan-alias.ts  fan-preferences.ts  fan-profile-state.ts  hackathon-compliance.ts  judge-proof.ts  mascot-archive.ts  match-experience.ts  matchday-alerts.ts  progression-attestation.ts  pulse-replay.ts  pulse-service.ts  quiz-bank.ts  rate-limit.ts  reward-catalog.ts  saved-recaps.ts  schedule-service.ts  schedule.ts  solana-client.ts  spoiler-protection.ts  sse.ts  team-branding.ts  tournament-journey.ts  txline.ts
programs/pulseproof/: Cargo.toml
programs/pulseproof/src/: lib.rs
public/: pulseproof-demo.vtt  (+2 more)
(+84 files in other folders)
